--- a/app/content/service/security/authentication-of-consumers-to-management-interfaces-and-within-support-channels.yml
+++ b/app/content/service/security/authentication-of-consumers-to-management-interfaces-and-within-support-channels.yml
@@ -1,8 +1,8 @@
 Authentication of consumers to management interfaces and within support channels:
-  "Can only authorised individuals from the consumer organisation authenticate and access management interfaces for the service?":
+  "User authentication and access management":
     requirements: The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to authenticate to and access management interfaces for the service (Principle 10 should be used assess the risks of different approaches to meet this objective).
     filters: The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to authenticate to and access management interfaces for the service (Principle 10 should be used assess the risks of different approaches to meet this objective).
-    label: User authentication and access management
+    hint: "Can only authorised individuals from the consumer organisation authenticate and access management interfaces for the service?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
@@ -10,10 +10,10 @@ Authentication of consumers to management interfaces and within support channels
         errorMessage: ""
         errorSummaryMessage: ""
       - type: assurance
-  "Can only authorised individuals from the consumer organisation perform actions affecting the consumer’s service through support channels?":
+  "User access control through support channels":
     requirements: The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to perform actions affecting the consumer’s service through support channels.
     filters: The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to perform actions affecting the consumer’s service through support channels.
-    label: User access control through support channels
+    hint: "Can only authorised individuals from the consumer organisation perform actions affecting the consumer’s service through support channels?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
@@ -22,10 +22,10 @@ Authentication of consumers to management interfaces and within support channels
         errorSummaryMessage: ""
       - type: assurance
 Separation and access control within management interfaces:
-  "Can consumers manage only their own service, and not access, modify or otherwise affect the service of other consumers via management tools and interfaces?":
+  "User access control within management interfaces":
     requirements: The consumer has sufficient confidence that other consumers cannot access, modify or otherwise affect their service management.
     filters: The consumer has sufficient confidence that other consumers cannot access, modify or otherwise affect their service management.
-    label: User access control within management interfaces
+    hint: "Can consumers manage only their own service, and not access, modify or otherwise affect the service of other consumers via management tools and interfaces?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
@@ -33,10 +33,10 @@ Separation and access control within management interfaces:
         errorMessage: ""
         errorSummaryMessage: ""
       - type: assurance
-  "Does your service support consumers in implementing the ‘principle of least privilege’ by providing the ability to constrain permissions given to consumer administrators?":
+  "Supports 'principle of least privilege'":
     requirements: The consumer can manage the risks of their own privileged access, e.g. through ‘principle of least privilege’, providing the ability to constrain permissions given to consumer administrators.
     filters: The consumer can manage the risks of their own privileged access, e.g. through ‘principle of least privilege’, providing the ability to constrain permissions given to consumer administrators.
-    label: Supports 'principle of least privilege'
+    hint: "Does your service support consumers in implementing the ‘principle of least privilege’ by providing the ability to constrain permissions given to consumer administrators?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
@@ -44,10 +44,10 @@ Separation and access control within management interfaces:
         errorMessage: ""
         errorSummaryMessage: ""
       - type: assurance
-  "Do you inform consumers which networks, management interfaces are exposed to and what functionality is available via those interfaces?":
+  "Visibility of the networks to which management interfaces are exposed":
     requirements: The consumer understands how management interfaces are protected (see Principle 11) and what functionality is available via those interfaces.
     filters: The consumer understands how management interfaces are protected (see Principle 11) and what functionality is available via those interfaces.
-    label: Visibility of the networks to which management interfaces are exposed
+    hint: "Do you inform consumers which networks, management interfaces are exposed to and what functionality is available via those interfaces?"
     dependsOnLots: PaaS, IaaS
     fields:
       - type: boolean
