--- a/app/content/service/security/secure-use-of-the-service-by-the-customer.yml
+++ b/app/content/service/security/secure-use-of-the-service-by-the-customer.yml
@@ -1,8 +1,8 @@
 Secure use of the service by the customer:
-  "Which end-device population is the cloud service accessible from?":
+  "Device access method":
     requirements: The consumer understands any service configuration options available to them and the security implications of choices they make.
     filters: The consumer understands any service configuration options available to them and the security implications of choices they make.
-    label: Device access method
+    hint: "Which end-device population is the cloud service accessible from?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radios
@@ -11,10 +11,10 @@ Secure use of the service by the customer:
           - "Partner devices"
           - "Unknown devices"
       - type: assurance
-  "Do you provide on-boarding guidance, including impacts on the consumer’s security?":
+  "On-boarding guidance":
     requirements: The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.
     filters: The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.
-    label: None
+    hint: "Do you provide on-boarding guidance, including impacts on the consumer’s security?"
     dependsOnLots: PaaS, IaaS
     fields:
       - type: radios
@@ -23,10 +23,10 @@ Secure use of the service by the customer:
           - "No"
           - "N/A"
       - type: assurance
-  "Do you provide user or administrator training on the use of the service and its security?":
+  "Training":
     requirements: The consumer can educate those administrating and using the service in how to use it safely and securely.
     filters: The consumer can educate those administrating and using the service in how to use it safely and securely.
-    label: None
+    hint: "Do you provide user or administrator training on the use of the service and its security?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
