--- a/app/content/service/security/data-in-transit-protection.yml
+++ b/app/content/service/security/data-in-transit-protection.yml
@@ -1,8 +1,8 @@
 Data-in-transit protection:
-  "How is data protected between the user's device and the service?":
+  "Data protection between user device and service":
     requirements: Data in transit is protected between the user’s devices and the service
     filters: Data in transit is protected between the user’s devices and the service
-    label: Data protection between user device and service
+    hint: "How is data protected between the user's device and the service?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radios
@@ -16,10 +16,10 @@ Data-in-transit protection:
           - "TLS, version 1.2 or later, encrypted"
           - "Not encrypted"
       - type: assurance
-  "How is data protected within the service?":
+  "Data protection within service":
     requirements: Data in transit is protected internally within the service
     filters: Data in transit is protected internally within the service
-    label: Data protection within service
+    hint: "How is data protected within the service?"
     dependsOnLots: PaaS, IaaS
     fields:
       - type: radios
@@ -33,10 +33,10 @@ Data-in-transit protection:
           - "TLS, version 1.2 or later, encrypted"
           - "Not encrypted"
       - type: assurance
-  "How is data protected between services?":
+  "Data protection between services":
     requirements: Data in transit is protected between the service and other services (e.g. where APIs are exposed)
     filters: Data in transit is protected between the service and other services (e.g. where APIs are exposed)
-    label: Data protection between services
+    hint: "How is data protected between services?"
     dependsOnLots: PaaS, IaaS
     fields:
       - type: radios
